<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/intro"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:id="@+id/radio_group">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioGroup"
            android:layout_alignTop="@+id/radioGroup"
            android:layout_weight="1"
            android:text="@string/butten_check" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/radio_group"
            android:layout_alignTop="@+id/radio_group"
            android:layout_weight="1"
            android:text="@string/butten_calculate" />

    </RadioGroup>

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv1"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/et1"
        android:text="@string/go"
        android:enabled="false"
        android:onClick="onClicked"/>

    <EditText
        android:id="@+id/et1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt1"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="number"
        android:enabled="false"
         />

    <EditText
        android:id="@+id/et2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt1"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/bt1"
        android:ems="10"
        android:inputType="number"
        android:enabled="false"
         />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv3"
        android:layout_alignBottom="@+id/tv3"
        android:layout_alignStart="@+id/radio_group"
        android:text="@string/far"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et2"
        android:layout_below="@+id/et2"
        android:layout_marginTop="34dp"
        android:text="@string/cel"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tv1"
        android:src="@mipmap/logo" />

</RelativeLayout>
